--- a/web/workspace/pages/index.dust
+++ b/web/workspace/pages/index.dust
@@ -60,7 +60,7 @@
 <div class="bdr--grey">
   <div class="container container--pad">  
     <h2 class="larger alignc">{@i18n}DADI: microservices technology{/i18n}</h2>
-    <p class="alignc normal">{@i18n}Connected content management products that can be used in varied combinations – including independently or alongside other technology.{/i18n}</p>
+    <p class="alignc normal">{@i18n}Connected applications that can be used in varied combinations – including alongside other technology.{/i18n}</p>
 
     <div class="grid">
       {#products.results}
