feat: homepage tweaks

--- a/web/workspace/frontend/sass/parts/infographic.scss
+++ b/web/workspace/frontend/sass/parts/infographic.scss
@@ -270,7 +270,7 @@ height: 100%;
 .explainer__blurb {
 	position: absolute;
 	color: #43595F;
-	width: 80%;
+	width: 300px;
 }
 .explainer__blurb p {
 	margin: 8px 0 0;
@@ -279,7 +279,7 @@ height: 100%;
 }
 .explainer__blurb img {
 	float: left;
-margin: 10px 17px 0 0;
+	margin: 13px 17px 0 0;
 }
 
 .b-api {
