--- a/web/workspace/public/assets/css/main.css
+++ b/web/workspace/public/assets/css/main.css
@@ -337,90 +337,6 @@ textarea {
   -webkit-appearance: button; /* 1 */
   font: inherit; /* 2 */
 }
-/*
-
-Atom One Light by Daniel Gamage
-Original One Light Syntax theme from https://github.com/atom/one-light-syntax
-
-base:    #fafafa
-mono-1:  #383a42
-mono-2:  #686b77
-mono-3:  #a0a1a7
-hue-1:   #0184bb
-hue-2:   #4078f2
-hue-3:   #a626a4
-hue-4:   #50a14f
-hue-5:   #e45649
-hue-5-2: #c91243
-hue-6:   #986801
-hue-6-2: #c18401
-
-*/
-.hljs {
-  display: block;
-  overflow-x: auto;
-  padding: 0.5em;
-  color: #383a42;
-  background: #fafafa;
-}
-.hljs-comment,
-.hljs-quote {
-  color: #a0a1a7;
-  font-style: italic;
-}
-.hljs-doctag,
-.hljs-keyword,
-.hljs-formula {
-  color: #a626a4;
-}
-.hljs-section,
-.hljs-name,
-.hljs-selector-tag,
-.hljs-deletion,
-.hljs-subst {
-  color: #e45649;
-}
-.hljs-literal {
-  color: #0184bb;
-}
-.hljs-string,
-.hljs-regexp,
-.hljs-addition,
-.hljs-attribute,
-.hljs-meta-string {
-  color: #50a14f;
-}
-.hljs-built_in,
-.hljs-class .hljs-title {
-  color: #c18401;
-}
-.hljs-attr,
-.hljs-variable,
-.hljs-template-variable,
-.hljs-type,
-.hljs-selector-class,
-.hljs-selector-attr,
-.hljs-selector-pseudo,
-.hljs-number {
-  color: #986801;
-}
-.hljs-symbol,
-.hljs-bullet,
-.hljs-link,
-.hljs-meta,
-.hljs-selector-id,
-.hljs-title {
-  color: #4078f2;
-}
-.hljs-emphasis {
-  font-style: italic;
-}
-.hljs-strong {
-  font-weight: bold;
-}
-.hljs-link {
-  text-decoration: underline;
-}
 @-webkit-keyframes pulse {
   0% {
     -webkit-transform: scale(1);
@@ -1164,7 +1080,7 @@ nav ul li a.on {
     padding: 10px 0 0;
     margin-top: 10px; } }
 header {
-  padding-bottom: 20px;
+  padding-bottom: 30px;
   overflow: hidden; }
 body.home header {
   padding-bottom: 0;
@@ -1959,14 +1875,14 @@ select {
 .explainer__blurb {
   position: absolute;
   color: #43595F;
-  width: 80%; }
+  width: 300px; }
 .explainer__blurb p {
   margin: 8px 0 0;
   font-size: 14px;
   line-height: 18px; }
 .explainer__blurb img {
   float: left;
-  margin: 10px 17px 0 0; }
+  margin: 13px 17px 0 0; }
 .b-api {
   left: 37%;
   top: 274px; }
