--- a/web/workspace/pages/careers.dust
+++ b/web/workspace/pages/careers.dust
@@ -14,7 +14,7 @@
       <blockquote class="cf normal txt--mid-grey"><p>“We don't do 'hack' or 'innovation' days because everyday, engineers get to personally innovate.<br><br>We don't piggy-back off old technology or patch and hack our way to delivering something we aren't proud of.<br><br>We research and experiment with bleeding edge technologies and collaborate to build out the perfect set of platform services.<br><br>We peer review and share vital engineering knowledge, encouraging each other to step up and embrace the most challenging of technical tasks.<br><br>All of those things are awesome.”</p></blockquote>
       <div class="block cf">
         <img src="/assets/img/arthur.jpg" class="float--left marg__right" width="80"><br>
-        <p class="small no-marg"><strong>Arthur Mingard,</strong><br>Principle Engineer</p>
+        <p class="small no-marg"><strong>Arthur Mingard,</strong><br>Principal Engineer</p>
       </div>
     </div>
   </div>
