Update to homepage copy

--- a/web/workspace/partials/infographic.dust
+++ b/web/workspace/partials/infographic.dust
@@ -1,7 +1,7 @@
 <div class="explainer">
   <div class="explainer__intro">
-    <h2 class="kilo">{@i18n}Open Source microservices stack{/i18n}</h2>
-    <p class="normal">{@i18n}DADI is an enterprise-grade, deployment-ready application stack, built around a microservices architecture.{/i18n}</p>
+    <h2 class="kilo">{@i18n}Open Source web services{/i18n}</h2>
+    <p class="normal">{@i18n}DADI is an enterprise-grade, deployment-ready web services stack, built around a microservices architecture.{/i18n}</p>
   </div>
 
   <div class="explainer__blurb b-api">
