--- a/web/workspace/pages/support.dust
+++ b/web/workspace/pages/support.dust
@@ -1,11 +1,11 @@
 {>"partials/header" /}
 
 {<header}
-<h1 class="hdr kilo read txt--blue">Build something cool with our technology</h1>
+<h1 class="hdr kilo read">Build something cool with our technology.</h1>
 {! <p class="inline-block normal read no-marg-i">Our support team can help you grow your business by optimising your data strategies and improving the way that you engage with your customers across all channels.</p> !}
 <p class="pad__top">
-  <a href="http://dadi-chat.herokuapp.com/" class="btn btn--blue normal">Slack with our devs</a>
-  <a href="https://github.com/dadi/" class="btn btn--blue normal marg__left">Raise issues in Github</a>
+  <a href="http://dadi-chat.herokuapp.com/" class="btn  normal">Slack with our devs</a>
+  <a href="https://github.com/dadi/" class="btn  normal marg__left">Raise issues in Github</a>
 </p>
 {/header}
 
