--- a/web/workspace/pages/product.dust
+++ b/web/workspace/pages/product.dust
@@ -7,39 +7,44 @@
 {<header}
   {#products.results[0]}
     <div class="container pad__bottom pad__top alignc">
-      <img src="/assets/products/dadi-{products.results[0].product}.png" class="product-logo-full" height="65" alt="DADI API">
-      <p class="hdr larger alignauto">{@soberMarkdown}{products.results[0].overview}{/soberMarkdown}</p>    
-      
-      <div class="pad__top">
-        <ul class="list--inline medium" style="color:{color}">
-          <li><a href="https://github.com/dadi/{products.results[0].product}" href="https://github.com/dadi/" onclick="ga('send','event','Github','Click','Product');">Github</a></li>
-          <li><a href="https://www.npmjs.com/package/@dadi/{products.results[0].product}" onclick="ga('send','event','NPM','Click','Product');">NPM</a></li>
-          <li><a href="http://docs.dadi.tech/{products.results[0].product}" onclick="ga('send','event','Documentation','Click','Product');">Documentation</a></li>
-          <li><a href="/{params.lang}/on-demand/" onclick="ga('send','event','On demand','Click','Product');">DADI On-demand</a></li>
-          {?demo}<li><a class="btn btn--small" href="{demo}">Live demo</a></li>{/demo}
-        </ul>
-      </div>
+      <img src="/assets/products/dadi-{product}.png" class="product-logo-full" height="65" alt="DADI API">
+      <p class="hdr larger alignauto">{@soberMarkdown}{overview}{/soberMarkdown}</p>
+
+      <p class="no-marg-i pad__top--half"><a href="http://docs.dadi.tech/{product}/getting-started/installing/" class="btn medium">How to install</a></p>
     </div>
   {/products.results[0]}
 {/header}
 
+<div class="alignc pad__top pad__bottom bdr__bottom bdr--bdr-grey" style="margin-top: -40px">
+  <ul class="list--inline normal" style="color:{color}">
+    <li><a href="https://github.com/dadi/{products.results[0].product}" href="https://github.com/dadi/" onclick="ga('send','event','Github','Click','Product');">Github</a></li>
+    <li><a href="https://www.npmjs.com/package/@dadi/{products.results[0].product}" onclick="ga('send','event','NPM','Click','Product');">NPM</a></li>
+    <li><a href="http://docs.dadi.tech/{products.results[0].product}" onclick="ga('send','event','Documentation','Click','Product');">Documentation</a></li>
+    <li><a href="/{params.lang}/on-demand/" onclick="ga('send','event','On demand','Click','Product');">DADI On-demand</a></li>
+    {?demo}<li><a class="btn btn--small" href="{demo}">Live demo</a></li>{/demo}
+  </ul>
+</div>
+
 {#products.results[0]}
   {#highlights}
-    <div class="container alignc">
-      <p class="medium hdr alignauto pad__bottom">{title}</p>
-
+    <div class="container alignc pad__top--x2 marg__bottom--x2">
       <ul class="list--no-style grid normal">
         {#keyPoints}
           <li class="col w-1-3 pad__bottom read">
             {?image}<img src="/assets/illustrations/{image|s}" style="max-height: 150px;width: auto;">{/image}
-            <strong class="block" style="color:{color}">{title}</strong> {@soberMarkdown}{description}{/soberMarkdown}
+            <strong class="block medium pad__bottom--half" style="color:{color}">{title}</strong> {@soberMarkdown}{description}{/soberMarkdown}
           </li>
         {/keyPoints}
       </ul> 
     </div>
   {/highlights}
 
-  <div class="container {?highlights}marg__top--x2 container--divider{:else}marg__bottom{/highlights}">
+<p class="block hdr medium txt--grey alignv alignc">Who's using it?</p>
+<div class="marg__top pad__top pad__bottom bg--light-grey alignc overflow-hidden">
+<img src="/assets/img/clients.png" class="col w-1-1">
+</div>
+
+  <div class="container pad__top--x2 pad__bottom--x2">
     <div class="grid">
       {?description}
         <div class="col w-1-2 normal read">
@@ -54,7 +59,6 @@
               <li>{@soberMarkdown}{.}{/soberMarkdown}</li>
             {/iter}
           </ul>
-          <a href="/{params.lang}/contact/" class="marg__top btn btn--green small">Contact us</a>
         </div>
       {/features}
     </div>
@@ -65,6 +69,8 @@
       {>"partials/code-examples/{product}" /}
     </div>
   {/example}
+
+  <div class="container container--divider alignc"><p class="large txt--blue alignauto no-marg" style="color:{color}">Contact us to discuss how we can help you lorem ipsum dolor sit amet</p><a href="/en/contact/" class="marg__top btn btn--blue normal" style="border-color:{color}">Contact us</a></div>
 {/products.results[0]}
 
 {>"partials/footer" /}
